--- a/src/css/views/play.css
+++ b/src/css/views/play.css
@@ -77,10 +77,6 @@
         display: block !important;
     }
 
-    .commentComp {
-        height: calc(100% - 3rem);
-    }
-
     .commentCom-cancel {
         text-align: right;
         height: 3rem;
@@ -377,7 +373,44 @@
 .commentCon .commentCom-cancel {
     display: none;
 }
-
+.comment-comp {
+    float: left;
+    width: 70% !important;
+}
+/* 相似歌曲,最近听过的用户区域 */
+.similar-content {
+float: left;
+width: 30%;
+padding-left: 0.8rem;
+}
+.similar-songs img {
+float: left;
+width: 5rem;
+height: 5rem;
+}
+.similar-songs-item {
+height: 5rem;
+margin: 0.3rem 0;
+padding: 0 0.1rem;
+cursor: pointer;
+}
+.similar-songs-item-msg {
+float: left;
+width: calc(100% - 5rem);
+padding-left: 0.3rem;
+height: 100%;
+}
+.similar-content .comment-content-title span {
+padding: 0;
+}
+.similar-songs-item-msg > div:first-child,
+.similar-songs-item-msg > div:last-child {
+height: 2.5rem;
+line-height: 2.5rem;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
+}
 /* 旋转动画 */
 @keyframes turn {
     0% {
